# Federated-Learning

./: .gitignore  cifar.py  client.py  evaluate.py  flower.py  functions.py  ood.py  pyproject.toml  simulation.py
cifar/: __init__.py  client_app.py  functions.py  server_app.py  task.py
lightning_logs/version_7/: metrics.csv
